--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anwiblios.github.io/anwiblios.github.io",
+  "homepage": "http://anwiblios.xyz",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
